--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,7 @@
       background: white;
       overflow-x: hidden;
     }
+
     .background-logo {
       position: absolute;
       top: 50%;
@@ -23,15 +24,17 @@
       z-index: 0;
       pointer-events: none;
     }
+
     @keyframes blink {
       0%, 100% { opacity: 0.07; }
       50% { opacity: 0.15; }
     }
+
     .content {
       position: relative;
       z-index: 1;
-      padding-bottom: 150px;
     }
+
     .header {
       background-color: #d90000;
       color: white;
@@ -40,6 +43,7 @@
       justify-content: space-between;
       align-items: center;
     }
+
     .main-card {
       background: rgba(255, 255, 255, 0.9);
       margin: -20px 10px 10px;
@@ -48,24 +52,29 @@
       padding: 20px;
       backdrop-filter: blur(10px);
     }
+
     .user-info {
       font-weight: bold;
       font-size: 16px;
     }
+
     .balance {
       font-size: 20px;
       margin-top: 10px;
     }
+
     .balance .eye {
       color: red;
       cursor: pointer;
       margin-left: 5px;
     }
+
     .buttons-row {
       display: flex;
       justify-content: space-around;
       margin-top: 15px;
     }
+
     .btn {
       background-color: #ffe5e5;
       border: 1px solid #ffcccc;
@@ -78,18 +87,21 @@
       font-size: 14px;
       cursor: pointer;
     }
+
     .banner {
       margin: 10px auto;
       border-radius: 10px;
       width: 95%;
       display: none;
     }
+
     .section {
       background: white;
       border-radius: 10px;
       margin: 10px;
       padding: 10px;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
@@ -97,12 +109,14 @@
       text-align: center;
       font-size: 12px;
     }
+
     .grid div {
       padding: 10px;
       cursor: pointer;
       background: #f8f8f8;
       border-radius: 10px;
     }
+
     .bottom-nav {
       position: fixed;
       bottom: 0;
@@ -117,43 +131,45 @@
       z-index: 10;
     }
 
-    /* Ads Section */
+    /* Ads styles */
     .ads-section {
       text-align: center;
-      margin: 15px auto;
+      margin: 10px;
     }
-    #adsVideo {
+
+    #adVideo, #adLogo {
       width: 95%;
       border-radius: 10px;
+      display: none;
     }
-    #adsControls {
+
+    #countdown {
+      font-size: 14px;
       margin-top: 5px;
-      font-size: 13px;
       color: #d90000;
     }
-    #logoScreen {
-      display: none;
-      width: 95%;
-      margin: auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      text-align: center;
-    }
-    #logoScreen img {
-      width: 100px;
-      opacity: 0.8;
+
+    .mute-btn {
+      margin-top: 5px;
+      background: #d90000;
+      color: white;
+      border: none;
+      padding: 6px 12px;
+      border-radius: 6px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
   <div class="content">
+    <!-- Header -->
     <div class="header">
       <div><b>Airtel Promo</b></div>
       <div><img src="bell.png" alt="Bell" width="20" /></div>
     </div>
 
+    <!-- Main Card -->
     <div class="main-card">
       <div class="user-info" id="userName">Loading...</div>
       <div id="userNumber">00000000000</div>
@@ -167,9 +183,11 @@
       </div>
     </div>
 
+    <!-- Promo & Update Banners -->
     <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
     <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
 
+    <!-- Services -->
     <div class="section">
       <b>Transfer & Cashout</b>
       <div class="grid">
@@ -192,20 +210,15 @@
 
     <!-- Ads Section -->
     <div class="ads-section">
-      <video id="adsVideo" muted autoplay playsinline>
-        <source src="ads.mp4" type="video/mp4" />
-      </video>
-      <div id="adsControls">
-        ⏳ <span id="countdown">20</span>s — <button onclick="toggleMute()">🔇</button>
-      </div>
-      <div id="logoScreen">
-        <img src="your-logo.png" alt="Airtel Logo" />
-        <div><b>Powered by Airtel</b></div>
-      </div>
+      <video id="adVideo" src="ad.mp4" muted></video>
+      <img id="adLogo" src="your-logo.png" alt="Powered by Airtel" />
+      <div id="countdown">Ad starts in 3s</div>
+      <button class="mute-btn" onclick="toggleMute()">🔇 Mute/Unmute</button>
     </div>
 
   </div>
 
+  <!-- Bottom Navigation -->
   <div class="bottom-nav">
     <div onclick="location.href='dashboard.html'">🏠 Home</div>
     <div onclick="location.href='scan.html'">📷 Scan</div>
@@ -217,6 +230,7 @@
     const user = JSON.parse(localStorage.getItem('user')) || {};
     const balanceElement = document.getElementById('userBalance');
     let isHidden = false;
+
     document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
     document.getElementById('userNumber').innerText = user.phone || '08000000000';
     const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
@@ -242,46 +256,39 @@
 
     cycleBanners();
 
-    // === ADS Script ===
-    const adsVideo = document.getElementById('adsVideo');
-    const logoScreen = document.getElementById('logoScreen');
+    // Ad Logic
+    const adVideo = document.getElementById('adVideo');
+    const adLogo = document.getElementById('adLogo');
     const countdown = document.getElementById('countdown');
 
-    let timeLeft = 20;
-    let showingAd = true;
-
-    function toggleMute() {
-      adsVideo.muted = !adsVideo.muted;
-    }
-
-    function showAdLoop() {
-      adsVideo.style.display = 'block';
-      logoScreen.style.display = 'none';
-      adsVideo.play();
-      timeLeft = 20;
-      showingAd = true;
-    }
-
-    function showLogoLoop() {
-      adsVideo.pause();
-      adsVideo.style.display = 'none';
-      logoScreen.style.display = 'block';
-      showingAd = false;
-    }
+    let adState = 'video';
+    let seconds = 20;
+    adVideo.style.display = 'block';
+    adVideo.play();
 
     setInterval(() => {
-      timeLeft--;
-      countdown.innerText = timeLeft;
-      if (timeLeft <= 0) {
-        if (showingAd) {
-          timeLeft = 10;
-          showLogoLoop();
+      seconds--;
+      countdown.innerText = `Showing ${adState === 'video' ? 'Ad Video' : 'Airtel Logo'}: ${seconds}s`;
+
+      if (seconds <= 0) {
+        if (adState === 'video') {
+          adVideo.style.display = 'none';
+          adLogo.style.display = 'block';
+          adState = 'logo';
+          seconds = 10;
         } else {
-          timeLeft = 20;
-          showAdLoop();
+          adLogo.style.display = 'none';
+          adVideo.style.display = 'block';
+          adVideo.play();
+          adState = 'video';
+          seconds = 20;
         }
       }
     }, 1000);
+
+    function toggleMute() {
+      adVideo.muted = !adVideo.muted;
+    }
   </script>
 </body>
-                                                     </html>
+</html>
