--- a/dashboard.html
+++ b/dashboard.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -9,241 +8,213 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background: white;
-      overflow-x: hidden;
-    }
+      overflow: hidden;
+    }.background-logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  opacity: 0.07;
+  filter: blur(8px);
+  animation: blink 4s infinite ease-in-out;
+  z-index: 0;
+  pointer-events: none;
+}
 
-    .background-logo {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 250px;
-      opacity: 0.07;
-      filter: blur(8px);
-      animation: blink 4s infinite ease-in-out;
-      z-index: 0;
-      pointer-events: none;
-    }
+@keyframes blink {
+  0%, 100% { opacity: 0.07; }
+  50% { opacity: 0.15; }
+}
 
-    @keyframes blink {
-      0%, 100% { opacity: 0.07; }
-      50% { opacity: 0.15; }
-    }
+.content {
+  position: relative;
+  z-index: 1;
+}
 
-    .content {
-      position: relative;
-      z-index: 1;
-    }
+.header {
+  background-color: #d90000;
+  color: white;
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-    .header {
-      background-color: #d90000;
-      color: white;
-      padding: 15px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+.main-card {
+  background: rgba(255, 255, 255, 0.9);
+  margin: -20px 10px 10px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px #ccc;
+  padding: 20px;
+  backdrop-filter: blur(10px);
+}
 
-    .main-card {
-      background: rgba(255, 255, 255, 0.9);
-      margin: -20px 10px 10px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px #ccc;
-      padding: 20px;
-      backdrop-filter: blur(10px);
-    }
+.user-info {
+  font-weight: bold;
+  font-size: 16px;
+}
 
-    .user-info {
-      font-weight: bold;
-      font-size: 16px;
-    }
+.balance {
+  font-size: 20px;
+  margin-top: 10px;
+}
 
-    .balance {
-      font-size: 20px;
-      margin-top: 10px;
-    }
+.balance .eye {
+  color: red;
+  cursor: pointer;
+  margin-left: 5px;
+}
 
-    .balance .eye {
-      color: red;
-      cursor: pointer;
-      margin-left: 5px;
-    }
+.buttons-row {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+}
 
-    .buttons-row {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 15px;
-    }
+.btn {
+  background-color: #ffe5e5;
+  border: 1px solid #ffcccc;
+  color: #d90000;
+  border-radius: 10px;
+  padding: 10px;
+  flex: 1;
+  margin: 0 5px;
+  text-align: center;
+  font-size: 14px;
+  cursor: pointer;
+}
 
-    .btn {
-      background-color: #ffe5e5;
-      border: 1px solid #ffcccc;
-      color: #d90000;
-      border-radius: 10px;
-      padding: 10px;
-      flex: 1;
-      margin: 0 5px;
-      text-align: center;
-      font-size: 14px;
-      cursor: pointer;
-    }
+.banner {
+  margin: 10px auto;
+  border-radius: 10px;
+  width: 95%;
+  display: none;
+}
 
-    .banner {
-      margin: 10px auto;
-      border-radius: 10px;
-      width: 95%;
-      display: none;
-    }
+.section {
+  background: white;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+}
 
-    .section {
-      background: white;
-      border-radius: 10px;
-      margin: 10px;
-      padding: 10px;
-    }
+.grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  text-align: center;
+  font-size: 12px;
+}
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(4, 1fr);
-      gap: 10px;
-      text-align: center;
-      font-size: 12px;
-    }
+.grid div {
+  padding: 10px;
+  cursor: pointer;
+  background: #f8f8f8;
+  border-radius: 10px;
+}
 
-    .grid div {
-      padding: 10px;
-      cursor: pointer;
-      background: #f8f8f8;
-      border-radius: 10px;
-    }
+.bottom-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: white;
+  border-top: 1px solid #ddd;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+  font-size: 12px;
+  z-index: 10;
+}
 
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      border-top: 1px solid #ddd;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      font-size: 12px;
-      z-index: 10;
-    }
+.ad-container {
+  position: fixed;
+  bottom: 60px;
+  width: 100%;
+  text-align: center;
+  z-index: 5;
+}
 
-    /* Ads styles */
-    .ads-section {
-      text-align: center;
-      margin: 10px;
-    }
+.ad-video {
+  width: 90%;
+  max-width: 320px;
+  border-radius: 10px;
+}
 
-    #adVideo, #adLogo {
-      width: 95%;
-      border-radius: 10px;
-      display: none;
-    }
+.airtel-logo-after {
+  display: none;
+  margin: auto;
+  width: 100px;
+  opacity: 0.7;
+}
 
-    #countdown {
-      font-size: 14px;
-      margin-top: 5px;
-      color: #d90000;
-    }
-
-    .mute-btn {
-      margin-top: 5px;
-      background: #d90000;
-      color: white;
-      border: none;
-      padding: 6px 12px;
-      border-radius: 6px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
-  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
-  <div class="content">
-    <!-- Header -->
+  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />  <div class="content">
     <div class="header">
       <div><b>Airtel Promo</b></div>
       <div><img src="bell.png" alt="Bell" width="20" /></div>
-    </div>
-
-    <!-- Main Card -->
-    <div class="main-card">
-      <div class="user-info" id="userName">Loading...</div>
-      <div id="userNumber">00000000000</div>
-      <div class="balance">
-        Account Balance: <span id="userBalance">₦0.00</span>
-        <span class="eye" onclick="toggleBalance()">👁️</span>
-      </div>
-      <div class="buttons-row">
-        <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
-        <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
-      </div>
-    </div>
-
-    <!-- Promo & Update Banners -->
-    <img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
-    <img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
-
-    <!-- Services -->
-    <div class="section">
-      <b>Transfer & Cashout</b>
-      <div class="grid">
-        <div onclick="location.href='transfer.html'">Transfer Money</div>
-        <div onclick="location.href='add-money.html'">Add Money</div>
-        <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
-        <div onclick="location.href='services.html'">More Services</div>
-      </div>
-    </div>
-
-    <div class="section">
-      <b>Recharge & Bill Payments</b>
-      <div class="grid">
-        <div onclick="location.href='airtime.html'">Airtime</div>
-        <div onclick="location.href='bundle.html'">Buy Bundle</div>
-        <div onclick="location.href='bills.html'">Pay Bills</div>
-        <div onclick="location.href='electricity.html'">Electricity</div>
-      </div>
-    </div>
-
-    <!-- Ads Section -->
-    <div class="ads-section">
-      <video id="adVideo" src="ad.mp4" muted></video>
-      <img id="adLogo" src="your-logo.png" alt="Powered by Airtel" />
-      <div id="countdown">Ad starts in 3s</div>
-      <button class="mute-btn" onclick="toggleMute()">🔇 Mute/Unmute</button>
-    </div>
-
+    </div><div class="main-card">
+  <div class="user-info" id="userName">Loading...</div>
+  <div id="userNumber">00000000000</div>
+  <div class="balance">
+    Account Balance: <span id="userBalance">₦0.00</span>
+    <span class="eye" onclick="toggleBalance()">👁️</span>
   </div>
+  <div class="buttons-row">
+    <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
+    <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
+  </div>
+</div>
 
-  <!-- Bottom Navigation -->
-  <div class="bottom-nav">
+<img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
+<img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
+
+<div class="section">
+  <b>Transfer & Cashout</b>
+  <div class="grid">
+    <div onclick="location.href='transfer.html'">Transfer Money</div>
+    <div onclick="location.href='add-money.html'">Add Money</div>
+    <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
+    <div onclick="location.href='services.html'">More Services</div>
+  </div>
+</div>
+
+<div class="section">
+  <b>Recharge & Bill Payments</b>
+  <div class="grid">
+    <div onclick="location.href='airtime.html'">Airtime</div>
+    <div onclick="location.href='bundle.html'">Buy Bundle</div>
+    <div onclick="location.href='bills.html'">Pay Bills</div>
+    <div onclick="location.href='electricity.html'">Electricity</div>
+  </div>
+</div>
+
+  </div>  <div class="ad-container">
+    <video id="adVideo" class="ad-video" muted autoplay playsinline></video>
+    <img src="your-logo.png" class="airtel-logo-after" id="logoAfter" alt="Powered by Airtel" />
+    <div id="adCountdown">Ad ends in <span id="countdown">20</span>s</div>
+  </div>  <div class="bottom-nav">
     <div onclick="location.href='dashboard.html'">🏠 Home</div>
     <div onclick="location.href='scan.html'">📷 Scan</div>
     <div onclick="location.href='history.html'">📄 History</div>
     <div onclick="location.href='more.html'">☰ More</div>
-  </div>
-
-  <script>
+  </div>  <script>
     const user = JSON.parse(localStorage.getItem('user')) || {};
     const balanceElement = document.getElementById('userBalance');
     let isHidden = false;
-
     document.getElementById('userName').innerText = (user.name || 'USER').toUpperCase();
     document.getElementById('userNumber').innerText = user.phone || '08000000000';
     const balanceValue = user.balance ? `₦${user.balance}` : '₦300.00';
     balanceElement.innerText = balanceValue;
-
     function toggleBalance() {
       isHidden = !isHidden;
       balanceElement.innerText = isHidden ? '••••••••' : balanceValue;
     }
-
     const updateBanner = document.getElementById('updateBanner');
     const promoBanner = document.getElementById('promoBanner');
-
     function cycleBanners() {
       updateBanner.style.display = 'block';
       promoBanner.style.display = 'none';
@@ -253,42 +224,34 @@
         setTimeout(cycleBanners, 10000);
       }, 5000);
     }
-
     cycleBanners();
 
     // Ad Logic
     const adVideo = document.getElementById('adVideo');
-    const adLogo = document.getElementById('adLogo');
-    const countdown = document.getElementById('countdown');
-
-    let adState = 'video';
-    let seconds = 20;
-    adVideo.style.display = 'block';
-    adVideo.play();
-
-    setInterval(() => {
-      seconds--;
-      countdown.innerText = `Showing ${adState === 'video' ? 'Ad Video' : 'Airtel Logo'}: ${seconds}s`;
-
-      if (seconds <= 0) {
-        if (adState === 'video') {
-          adVideo.style.display = 'none';
-          adLogo.style.display = 'block';
-          adState = 'logo';
-          seconds = 10;
-        } else {
-          adLogo.style.display = 'none';
+    const logoAfter = document.getElementById('logoAfter');
+    const countdownEl = document.getElementById('countdown');
+    let adTime = 20;
+    adVideo.src = "ad.mp4";
+    adVideo.onloadeddata = () => adVideo.play();
+    let adInterval = setInterval(() => {
+      adTime--;
+      countdownEl.textContent = adTime;
+      if (adTime <= 0) {
+        clearInterval(adInterval);
+        adVideo.style.display = 'none';
+        logoAfter.style.display = 'block';
+        setTimeout(() => {
+          logoAfter.style.display = 'none';
           adVideo.style.display = 'block';
-          adVideo.play();
-          adState = 'video';
-          seconds = 20;
-        }
+          adTime = 20;
+          countdownEl.textContent = adTime;
+          adInterval = setInterval(() => {
+            adTime--;
+            countdownEl.textContent = adTime;
+            if (adTime <= 0) location.reload();
+          }, 1000);
+        }, 10000);
       }
     }, 1000);
-
-    function toggleMute() {
-      adVideo.muted = !adVideo.muted;
-    }
-  </script>
-</body>
+  </script></body>
 </html>
