--- a/dashboard.html
+++ b/dashboard.html
@@ -1,172 +1,245 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>Airtel Promo Dashboard</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
+      margin: 0;
       font-family: Arial, sans-serif;
-      background: url('your-logo.png') no-repeat center center fixed;
-      background-size: cover;
-      backdrop-filter: blur(10px);
-      overflow: hidden;
+      background: white;
+      overflow-x: hidden;
+      overflow-y: hidden;
+    }
+    .background-logo {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 200px;
+      opacity: 0.07;
+      filter: blur(8px);
+      animation: blink 4s infinite ease-in-out;
+      z-index: 0;
+      pointer-events: none;
+    }
+    @keyframes blink {
+      0%, 100% { opacity: 0.07; }
+      50% { opacity: 0.15; }
+    }
+    .content {
+      position: relative;
+      z-index: 1;
+      padding-bottom: 180px;
     }
     .header {
       background-color: #d90000;
       color: white;
-      padding: 10px;
-      text-align: center;
-      font-size: 20px;
+      padding: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .glass-card {
-      background: rgba(255, 255, 255, 0.2);
-      backdrop-filter: blur(8px);
+    .main-card {
+      background: rgba(255, 255, 255, 0.9);
+      margin: -20px 10px 10px;
       border-radius: 15px;
+      box-shadow: 0 0 10px #ccc;
       padding: 20px;
-      margin: 10px;
-      text-align: center;
-      color: white;
+      backdrop-filter: blur(10px);
     }
-    .buttons-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      padding: 10px;
-      text-align: center;
+    .user-info {
+      font-weight: bold;
+      font-size: 16px;
     }
-    .buttons-grid button, .footer button, #paymentBtn {
-      padding: 10px;
-      background-color: #d90000;
-      color: white;
-      border: none;
+    .balance {
+      font-size: 20px;
+      margin-top: 10px;
+    }
+    .balance .eye {
+      color: red;
+      cursor: pointer;
+      margin-left: 5px;
+    }
+    .buttons-row {
+      display: flex;
+      justify-content: space-around;
+      margin-top: 15px;
+    }
+    .btn {
+      background-color: #ffe5e5;
+      border: 1px solid #ffcccc;
+      color: #d90000;
       border-radius: 10px;
+      padding: 10px;
+      flex: 1;
+      margin: 0 5px;
+      text-align: center;
       font-size: 14px;
+      cursor: pointer;
     }
     .banner {
-      margin: 10px;
-      height: 100px;
-      background-size: cover;
-      border-radius: 15px;
+      margin: 10px auto;
+      border-radius: 10px;
+      width: 95%;
+      display: none;
     }
-    .video-ads {
-      height: 120px;
+    .section {
+      background: white;
+      border-radius: 10px;
+      margin: 10px;
+      padding: 10px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      gap: 10px;
+      text-align: center;
+      font-size: 12px;
+    }
+    .grid div {
+      padding: 10px;
+      cursor: pointer;
+      background: #f8f8f8;
+      border-radius: 10px;
+    }
+    .bottom-nav {
+      position: fixed;
+      bottom: 120px;
+      left: 0;
+      right: 0;
+      background: white;
+      border-top: 1px solid #ddd;
+      display: flex;
+      justify-content: space-around;
+      padding: 10px 0;
+      font-size: 12px;
+      z-index: 10;
+    }
+    .video-container {
+      position: fixed;
+      bottom: 0;
+      left: 0;
       width: 100%;
-      margin: 10px 0;
-      position: relative;
+      height: 120px;
+      background: black;
+      z-index: 9;
     }
     video {
       width: 100%;
       height: 100%;
-      border-radius: 10px;
+      object-fit: cover;
     }
-    #countdown {
+    .countdown {
       position: absolute;
       top: 5px;
       right: 10px;
-      background: rgba(0,0,0,0.6);
       color: white;
-      padding: 2px 6px;
-      border-radius: 6px;
+      background: rgba(0,0,0,0.6);
+      padding: 3px 8px;
+      border-radius: 10px;
       font-size: 12px;
-    }
-    .footer {
-      position: fixed;
-      bottom: 0;
-      width: 100%;
-      background: #fff;
-      display: flex;
-      justify-content: space-around;
-      padding: 10px 0;
-      border-top: 1px solid #ccc;
     }
   </style>
 </head>
 <body>
-  <div class="header">Airtel Promo 🔔</div>  <div class="glass-card">
-    <div id="userName">Emmanuel</div>
-    <div id="userPhone">+2348012345678</div>
-    <div id="userBalance">₦0</div>
-  </div>  <img src="update-banner.png" class="banner" id="banner">  <div class="buttons-grid">
-    <button onclick="location.href='fund.html'">Add Money</button>
-    <button onclick="location.href='withdraw.html'">Withdraw</button>
-    <button>Transfer</button>
-    <button>Airtime</button>
-    <button>Bundle</button>
-    <button>Bills</button>
-  </div>  <div class="video-ads">
-    <video id="adVideo" autoplay muted playsinline>
-      <source src="ad.mp4" type="video/mp4">
+  <img src="your-logo.png" alt="Airtel Logo" class="background-logo" />
+  <div class="content">
+    <div class="header">
+      <div><b>Airtel Promo</b></div>
+      <div><img src="bell.png" alt="Bell" width="20" /></div>
+    </div>
+    <div class="main-card">
+      <div class="user-info" id="userName">Loading...</div>
+      <div id="userNumber">00000000000</div>
+      <div class="balance">
+        Account Balance: <span id="userBalance">₦0.00</span>
+        <span class="eye" onclick="toggleBalance()">👁️</span>
+      </div>
+      <div class="buttons-row">
+        <div class="btn" onclick="location.href='add-money.html'">+ Add Money</div>
+        <div class="btn" onclick="location.href='withdraw.html'">Withdraw</div>
+      </div>
+      <div class="btn" onclick="incrementTap()">I have funded</div>
+    </div><img src="update-banner.png" class="banner" id="updateBanner" alt="Update Banner" />
+<img src="promo-banner.png" class="banner" id="promoBanner" alt="Promo Banner" />
+
+<div class="section">
+  <b>Transfer & Cashout</b>
+  <div class="grid">
+    <div onclick="location.href='transfer.html'">Transfer Money</div>
+    <div onclick="location.href='add-money.html'">Add Money</div>
+    <div onclick="location.href='withdraw.html'">Withdraw Cash</div>
+    <div onclick="location.href='services.html'">More Services</div>
+  </div>
+</div>
+<div class="section">
+  <b>Recharge & Bill Payments</b>
+  <div class="grid">
+    <div onclick="location.href='airtime.html'">Airtime</div>
+    <div onclick="location.href='bundle.html'">Buy Bundle</div>
+    <div onclick="location.href='bills.html'">Pay Bills</div>
+    <div onclick="location.href='electricity.html'">Electricity</div>
+  </div>
+</div>
+
+  </div>  <div class="bottom-nav">
+    <div onclick="location.href='dashboard.html'">🏠 Home</div>
+    <div onclick="location.href='scan.html'">📷 Scan</div>
+    <div onclick="location.href='history.html'">📄 History</div>
+    <div onclick="location.href='more.html'">☰ More</div>
+  </div>  <div class="video-container">
+    <video id="adVideo" autoplay muted=false volume="0.2" playsinline>
+      <source src="ad.mp4" type="video/mp4" />
     </video>
-    <div id="countdown">20s</div>
-  </div>  <div style="text-align: center; margin: 10px;">
-    <button id="paymentBtn">I Have Made Payments</button>
-  </div>  <div class="footer">
-    <button>Home</button>
-    <button>Wallet</button>
-    <button>Profile</button>
+    <div class="countdown" id="countdown">20s</div>
   </div>  <script>
-    // Set default user
-    if (!localStorage.getItem("user")) {
-      localStorage.setItem("user", JSON.stringify({
-        name: "Emmanuel",
-        phone: "+2348012345678",
-        balance: 0
-      }));
+    const user = JSON.parse(localStorage.getItem('user')) || { name: 'User', phone: '08000000000', balance: 0 };
+    document.getElementById('userName').innerText = user.name.toUpperCase();
+    document.getElementById('userNumber').innerText = user.phone;
+    const balanceElement = document.getElementById('userBalance');
+    let isHidden = false;
+    function toggleBalance() {
+      isHidden = !isHidden;
+      balanceElement.innerText = isHidden ? '••••••••' : `₦${user.balance}`;
     }
+    toggleBalance();
+    toggleBalance();
 
-    const user = JSON.parse(localStorage.getItem("user"));
-    document.getElementById("userName").innerText = user.name;
-    document.getElementById("userPhone").innerText = user.phone;
-    document.getElementById("userBalance").innerText = `₦${user.balance}`;
+    // Banner cycling
+    const updateBanner = document.getElementById('updateBanner');
+    const promoBanner = document.getElementById('promoBanner');
+    function cycleBanners() {
+      updateBanner.style.display = 'block';
+      promoBanner.style.display = 'none';
+      setTimeout(() => {
+        updateBanner.style.display = 'none';
+        promoBanner.style.display = 'block';
+        setTimeout(cycleBanners, 10000);
+      }, 5000);
+    }
+    cycleBanners();
 
-    // Payment button logic
-    let tapCount = parseInt(localStorage.getItem('tapCount') || '0');
-    document.getElementById('paymentBtn').addEventListener('click', () => {
-      tapCount++;
-      localStorage.setItem('tapCount', tapCount);
-      if (tapCount >= 20) {
-        const currentBalance = parseFloat(user.balance || 0);
-        user.balance = currentBalance + 3000;
-        localStorage.setItem('user', JSON.stringify(user));
-        document.getElementById('userBalance').innerText = `₦${user.balance}`;
-        alert("₦3,000 has been added to your balance!");
-        tapCount = 0;
-        localStorage.setItem('tapCount', '0');
-      } else {
-        alert(`Tap ${20 - tapCount} more times to receive ₦3,000 bonus.`);
-      }
-    });
-
-    // Countdown and ad rotation
-    let countdown = 20;
-    const countdownEl = document.getElementById("countdown");
-    const videoEl = document.getElementById("adVideo");
-
+    // Countdown logic
+    let seconds = 20;
+    const countdown = document.getElementById('countdown');
     setInterval(() => {
-      countdown--;
-      countdownEl.innerText = `${countdown}s`;
-      if (countdown <= 0) {
-        videoEl.pause();
-        countdownEl.innerText = "Logo...";
-        // Show logo or do something here
-        setTimeout(() => {
-          countdown = 20;
-          videoEl.play();
-        }, 10000);
-      }
+      seconds--;
+      countdown.innerText = seconds + 's';
+      if (seconds === 0) seconds = 20;
     }, 1000);
 
-    // Banner switcher
-    const banner = document.getElementById('banner');
-    let toggle = true;
-    setInterval(() => {
-      banner.src = toggle ? 'promo-banner.png' : 'update-banner.png';
-      toggle = !toggle;
-    }, 10000);
+    // I have funded taps logic
+    let taps = 0;
+    function incrementTap() {
+      taps++;
+      if (taps >= 20) {
+        user.balance += 3000;
+        localStorage.setItem('user', JSON.stringify(user));
+        balanceElement.innerText = `₦${user.balance}`;
+        taps = 0;
+        alert("₦3,000 added to your balance");
+      }
+    }
   </script></body>
 </html>
